# People-Counting

./: README.md  axis_counts.db  axis_server.py  crowd_counting_test.ipynb  data_analysis.ipynb  db_setup.py  engine.ipynb  engine.py  initial_version.py  main.py  mqtt_test_publishing.py  mqtt_test_subscribing.py  mqtt_testing.py  mqtt_testing_sensor.py  offline_cache.db  one_off_db_actions.py  people_counts.db  pyproject.toml  requirements.txt  server.py  server_testing.py  test.ipynb  test.py  traffic_tracking_test.ipynb
