[project]
name = "court-ocupancy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.1",
    "grafana>=0.0.1",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "sahi>=0.11.14",
    "supervision>=0.26.1",
    "ultralytics>=8.3.218",
    "uvicorn>=0.38.0",
]
